# nemotron-asr-mlx

./: .gitignore  LICENSE  README.md  benchmark.py  eval_beam.py  eval_results.json  eval_wer.py  optimization_results.json  pyproject.toml  test_optimizations.py  test_speed.py
demo/: index.html  server.py
docs/benchmarks/: apple-silicon-asr-comparison.md
docs/plans/: 2026-02-28-nemotron-asr-mlx-design.md  2026-02-28-nemotron-asr-mlx-implementation.md
docs/reference/: cache-aware-streaming-paper.md  landscape.md  reusable-components.md
nemotron_asr_mlx/: __init__.py  attention.py  audio.py  cache.py  cli.py  convert.py  decoder.py  encoder.py  lm.py  model.py  tokenizer.py
tests/: test_cache.py  test_model.py  test_tokenizer.py
