[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemotron-asr-mlx"
version = "0.2.0"
description = "NVIDIA Nemotron Speech Streaming ASR on Apple Silicon via MLX"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "199 Biotechnologies" }]
keywords = ["asr", "speech", "mlx", "apple-silicon", "streaming", "nemotron"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx>=0.22.1",
    "huggingface-hub",
    "numpy",
    "sounddevice",
    "sentencepiece",
    "typer",
]

[project.scripts]
nemotron-asr = "nemotron_asr_mlx.cli:app"

[project.urls]
Homepage = "https://github.com/199-biotechnologies/nemotron-asr-mlx"
Repository = "https://github.com/199-biotechnologies/nemotron-asr-mlx"

[tool.setuptools.packages.find]
include = ["nemotron_asr_mlx*"]
